<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/profileName"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_surname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true" />


    <EditText
        android:id="@+id/birthdate"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_birthdate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:singleLine="true" />

    <EditText
        android:id="@+id/group"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_group"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/saveButton" />

</LinearLayout>