<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_timetable">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.android.kbipapp.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_timetable"
        android:name="com.android.kbipapp.TimetableFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.android.kbipapp.JournalFragment"
        android:label="@string/title_journal"
        tools:layout="@layout/fragment_journal" />
</navigation>